# Rag-MCP

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  mcp-config-example.json  pyproject.toml  requirements.txt
mcp_server/: main.py  models.py
rag_core/: config.py  embedding.py  model.py  search.py  storage.py  vector_store.py
tests/: test_lmstudio.py
